--- a/bootstrap/resources.yaml.j2
+++ b/bootstrap/resources.yaml.j2
@@ -7,7 +7,7 @@ metadata:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: onepassword
+  name: onepassword-secret
   namespace: security
 stringData:
   1password-credentials.json: op://Kubernetes/1password/OP_CREDENTIALS_JSON
