chore: update bootstrap process

--- a/bootstrap/resources.yaml.j2
+++ b/bootstrap/resources.yaml.j2
@@ -24,5 +24,4 @@ metadata:
   name: sops-age
   namespace: flux-system
 stringData:
-  age.agekey: |
-    op://Kubernetes/flux/FLUX_SOPS_PRIVATE_KEY
+  age.agekey: op://Kubernetes/flux/FLUX_SOPS_PRIVATE_KEY
