chore: format yaml

--- a/.taskfiles/kubernetes/resources/privileged-pod.yaml.j2
+++ b/.taskfiles/kubernetes/resources/privileged-pod.yaml.j2
@@ -4,7 +4,8 @@ spec:
   containers:
     - name: debug
       image: docker.io/library/alpine:latest
-      command: ["/bin/sh"]
+      command:
+        - "/bin/sh"
       stdin: true
       stdinOnce: true
       tty: true
