--- a/.taskfiles/kubernetes/resources/speed-test-nfs.yaml.j2
+++ b/.taskfiles/kubernetes/resources/speed-test-nfs.yaml.j2
@@ -6,7 +6,7 @@ metadata:
 spec:
   storageClassName: truenas-ssd-nfs
   accessModes:
-  - ReadWriteMany
+    - ReadWriteMany
   resources:
     requests:
       storage: 5G
@@ -24,16 +24,19 @@ spec:
         job: write
     spec:
       containers:
-      - name: write
-        image: ubuntu:noble
-        command: ["sh", "-c", "set -x; dd if=/dev/zero of=/mnt/pv/test.img bs=1G count=1 oflag=dsync"]
-        volumeMounts:
-        - mountPath: "/mnt/pv"
-          name: test-volume
+        - name: write
+          image: ubuntu:noble
+          command:
+            - "sh"
+            - "-c"
+            - "set -x; dd if=/dev/zero of=/mnt/pv/test.img bs=1G count=1 oflag=dsync"
+          volumeMounts:
+            - mountPath: "/mnt/pv"
+              name: test-volume
       volumes:
-      - name: test-volume
-        persistentVolumeClaim:
-          claimName: test-claim
+        - name: test-volume
+          persistentVolumeClaim:
+            claimName: test-claim
       restartPolicy: Never
 ---
 apiVersion: batch/v1
@@ -49,14 +52,17 @@ spec:
         job: read
     spec:
       containers:
-      - name: read
-        image: ubuntu:noble
-        command: ["sh", "-c", "set -x; sleep 15s && dd if=/mnt/pv/test.img of=/dev/null bs=8k"]
-        volumeMounts:
-        - mountPath: "/mnt/pv"
-          name: test-volume
+        - name: read
+          image: ubuntu:noble
+          command:
+            - "sh"
+            - "-c"
+            - "set -x; sleep 15s && dd if=/mnt/pv/test.img of=/dev/null bs=8k"
+          volumeMounts:
+            - mountPath: "/mnt/pv"
+              name: test-volume
       volumes:
-      - name: test-volume
-        persistentVolumeClaim:
-          claimName: test-claim
+        - name: test-volume
+          persistentVolumeClaim:
+            claimName: test-claim
       restartPolicy: Never
