chore: format yaml

--- a/.taskfiles/kubernetes/resources/privileged-pod.yaml.j2
+++ b/.taskfiles/kubernetes/resources/privileged-pod.yaml.j2
@@ -5,7 +5,7 @@ spec:
     - name: debug
       image: docker.io/library/alpine:latest
       command:
-        - "/bin/sh"
+        - /bin/sh
       stdin: true
       stdinOnce: true
       tty: true
