--- a/.taskfiles/kubernetes/resources/speed-test-nfs.yaml.j2
+++ b/.taskfiles/kubernetes/resources/speed-test-nfs.yaml.j2
@@ -27,9 +27,9 @@ spec:
         - name: write
           image: ubuntu:noble
           command:
-            - "sh"
-            - "-c"
-            - "set -x; dd if=/dev/zero of=/mnt/pv/test.img bs=1G count=1 oflag=dsync"
+            - /bin/sh
+            - -c
+            - set -x; dd if=/dev/zero of=/mnt/pv/test.img bs=1G count=1 oflag=dsync
           volumeMounts:
             - mountPath: "/mnt/pv"
               name: test-volume
@@ -55,9 +55,9 @@ spec:
         - name: read
           image: ubuntu:noble
           command:
-            - "sh"
-            - "-c"
-            - "set -x; sleep 15s && dd if=/mnt/pv/test.img of=/dev/null bs=8k"
+            - /bin/sh
+            - -c
+            - set -x; sleep 15s && dd if=/mnt/pv/test.img of=/dev/null bs=8k
           volumeMounts:
             - mountPath: "/mnt/pv"
               name: test-volume
