feat: add kustomize-controller sops decryption

--- a/bootstrap/resources.yaml.j2
+++ b/bootstrap/resources.yaml.j2
@@ -16,6 +16,19 @@ stringData:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: flux-system
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: sops-age-secret
+  namespace: flux-system
+stringData:
+  age.agekey: op://Kubernetes/sops/SOPS_PRIVATE_KEY
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: network
 ---
 apiVersion: v1
@@ -25,16 +38,3 @@ metadata:
   namespace: network
 stringData:
   CLOUDFLARE_TUNNEL_ID: op://Kubernetes/cloudflare/CLOUDFLARE_TUNNEL_ID
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: flux-system
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: sops-age
-  namespace: flux-system
-stringData:
-  age.agekey: op://Kubernetes/flux/FLUX_SOPS_PRIVATE_KEY
