chore(talos): add iscsi-tools & util-linux-tools extensions

--- a/talos/schematic.yaml.j2
+++ b/talos/schematic.yaml.j2
@@ -20,4 +20,6 @@ customization:
     officialExtensions:
       - siderolabs/amdgpu
       - siderolabs/amd-ucode
+      - siderolabs/iscsi-tools
       - siderolabs/nfsrahead
+      - siderolabs/util-linux-tools
