--- a/.taskfiles/kubernetes/resources/speed-test-block.yaml.j2
+++ b/.taskfiles/kubernetes/resources/speed-test-block.yaml.j2
@@ -4,7 +4,7 @@ apiVersion: v1
 metadata:
   name: test-claim
 spec:
-  storageClassName: truenas-ssd-iscsi
+  storageClassName: ceph-block
   accessModes:
     - ReadWriteOnce
   resources:
