--- a/.taskfiles/kubernetes/resources/speed-test-file.yaml.j2
+++ b/.taskfiles/kubernetes/resources/speed-test-file.yaml.j2
@@ -4,7 +4,7 @@ apiVersion: v1
 metadata:
   name: test-claim
 spec:
-  storageClassName: truenas-ssd-nfs
+  storageClassName: ceph-filesystem
   accessModes:
     - ReadWriteMany
   resources:
