chore(talos): correct allowed kubernetes ns api access

--- a/talos/nodes/k8s-1.yaml.j2
+++ b/talos/nodes/k8s-1.yaml.j2
@@ -23,7 +23,7 @@ machine:
     kubernetesTalosAPIAccess:
       allowedKubernetesNamespaces:
         - actions-runner-system
-        - system
+        - system-upgrade
       allowedRoles:
         - os:admin
       enabled: true
