chore(talos): increase pod limit

--- a/talos/nodes/k8s-1.yaml.j2
+++ b/talos/nodes/k8s-1.yaml.j2
@@ -61,6 +61,7 @@ machine:
     extraConfig:
       featureGates:
         ImageVolume: true
+      maxPods: 250
       serializeImagePulls: false
     image: ghcr.io/siderolabs/kubelet:v1.34.1
     nodeIP:
